JavaIo green